// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Renders Disabled Circle Button 1`] = `
<View
  style={
    Object {
      "marginRight": 10,
      "marginTop": 20,
      "width": 80,
    }
  }
>
  <View
    accessible={true}
    focusable={true}
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      Object {
        "alignSelf": "center",
        "backgroundColor": "#FFF",
        "borderRadius": 100,
        "elevation": 10,
        "height": 60,
        "opacity": 1,
        "width": 60,
      }
    }
  >
    <Image
      source={1}
      style={
        Object {
          "height": 32,
          "marginLeft": 14,
          "marginTop": 14,
          "width": 32,
        }
      }
    />
  </View>
  <Text
    allowFontScaling={false}
    style={
      Object {
        "color": "#707070",
        "marginTop": 5,
        "textAlign": "center",
      }
    }
  >
    TestBtn
  </Text>
</View>
`;

exports[`Renders Enabled Circle Button 1`] = `
<View
  style={
    Object {
      "marginRight": 10,
      "marginTop": 20,
      "width": 80,
    }
  }
>
  <View
    accessible={true}
    focusable={true}
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      Object {
        "alignSelf": "center",
        "backgroundColor": "#FD4040",
        "borderRadius": 100,
        "elevation": 10,
        "height": 60,
        "opacity": 1,
        "width": 60,
      }
    }
  >
    <Image
      source={1}
      style={
        Object {
          "height": 32,
          "marginLeft": 14,
          "marginTop": 14,
          "width": 32,
        }
      }
    />
  </View>
  <Text
    allowFontScaling={false}
    style={
      Object {
        "color": "#707070",
        "marginTop": 5,
        "textAlign": "center",
      }
    }
  >
    TestBtn
  </Text>
</View>
`;
